# lazyredis

./: .pre-commit-config.yaml  AGENTS.md  Cargo.toml  FUTURE.md  LICENSE  README.md
.github/workflows/: ci.yml  cross-compile.yml  release.yml
scripts/: install.sh  update-brew-formula.sh
src/: app.rs  command.rs  config.rs  main.rs  search.rs  seed.rs  ui.rs
src/app/: app_clipboard.rs  app_fetch.rs  mod.rs  redis_client.rs  redis_stats.rs  state_delete_dialog.rs  state_profile_selector.rs  tests.rs  value_format.rs  value_viewer.rs
