[package]
name = "lazyredis"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { version = "0.31.0", features = ["tokio-comp"] }
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
directories = "5.0"
toml = "0.8"
crossclip = "0.7.1"
clap = { version = "4.5.4", features = ["derive"] }
fuzzy-matcher = "0.3.7"
