[package]
name = "lazyredis"
version = "0.7.0"
edition = "2021"

[dependencies]
redis = { version = "0.31.0", features = ["tokio-comp"] }
tokio = { version = "1", features = ["full"] }
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
directories = "6.0.0"
toml = "0.8.22"
crossclip = { version = "0.7.1" }
clap = { version = "4.5.4", features = ["derive"] }
fuzzy-matcher = "0.3.7"
url = "2.5.4"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
serial_test = "3.0.0"
