[package]
name = "lazyredis"
version = "0.8.0"
edition = "2021"

[dependencies]
redis = { version = "1.0.2", features = ["tokio-comp"] }
tokio = { version = "1.48.0", features = ["full"] }
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
directories = "6.0.0"
toml = "0.9.10"
crossclip = "0.7.1"
clap = { version = "4.5.53", features = ["derive"] }
fuzzy-matcher = "0.3.7"
url = "2.5.7"
anyhow = "1.0.100"
serde_json = "1.0.148"

[dev-dependencies]
tempfile = "3.24.0"
serial_test = "3.2.0"
